# maizev2

./: .gitignore  .replit  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  app.py  auth.py  auth0_integration.py  auth_auth0.py  auth_student.py  config.py  decorators_auth0.py  deploy.sh  docker-compose.yml  extensions.py  finish-deployment.sh  gunicorn_config.py  init-db.sql  init_db.py  maize.service.template  migrate_admin.py  models.py  nginx.conf.template  professor.py  pyproject.toml  replit.md  requirements.txt  run_local.sh  seed_admin.py  seed_institutions.py  setup_database.sh  student.py
attached_assets/: Maize_Synthesis_1769307605300.txt  Maize_TA_QA_Master_[CURRENT]_-_2024_exam_query_1769483505384.csv  Maize_TA_QA_Master_[CURRENT]_-_404_pset1_1769386659190.csv  Maize_TA_QA_Master_[CURRENT]_-_Copy_of_v2_logs_1_26_1769455427018.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet13_1769390314180.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet16_(1)_1769479617109.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet16_1769472083092.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet17_1769482712194.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet21_1769485428249.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet24_1769575720630.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet25_(1)_1770755253807.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet25_(2)_1770775092248.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet25_1769655856655.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet25_1770497853821.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet27_1770817009182.csv  Maize_TA_QA_Master_[CURRENT]_-_Sheet2_(1)_1769221749446.csv  (+41 more)
docs/: DATABASE.md  RAG.md  (+2 more)
(+57 files in other folders)
